--- a/style.css
+++ b/style.css
@@ -51,13 +51,16 @@ li {
   font-family: sans-serif;
   height: 28px;
   padding-bottom: -15px;
-  float: right;
   margin-right: 10px;
   margin-bottom: 12px;
   font-size: 25px;
   width: 40px;
   text-align: center;
   border-radius: 6px;
+  position: absolute;
+  right: 5px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .close:hover {
@@ -99,7 +102,7 @@ li {
   list-style: none;
   background-color: aliceblue;
   width: 499px;
-  height: 40px;
+  min-height: 41px;
   padding: 6px 0 0 20px;
   border-bottom: 1px solid #999;
   border-left: 1px solid #999;
@@ -107,6 +110,8 @@ li {
   cursor: pointer;
   transition: 1s;
   font-family: inherit;
+  position: relative;
+  padding-right: 50px;
 }
 
 .task {
